# tagoror

./: README.md  main.py  pyproject.toml
.github/workflows/: python-tests.yml
src/config/: prompts.yaml
src/core/: extractor.py  models.py  orchestrator.py  prompt_manage.py  prompt_manager.py
src/core/pipeline/: extractor.py  orchestrator.py  pipeline.py
src/core/pipeline/evaluation/: entity_auditor.py
src/core/pipeline/evaluation/strategies/: llm_auditor.py  ontology_cache.py
src/entity_validation/: base_entity_validation.py
src/entity_validation/strategies/: pure_llm_strategy.py
src/evaluation/: entity_auditor.py  entity_evaluator.py  entity_validation.py
src/evaluation/strategies/: llm_auditor.py  majority_vote.py  pure_llm_strategy.py
src/exceptions/: __init__.py  critical_system_exception.py  llm_parse_exception.py  transient_network_exception.py
src/execution/strategies/: pure_llm_strategy.py
src/llm/: base_llm_client.py  config.py  models.py  retry.py
src/llm/clients/: gemini.py
src/models/: models.py
src/ontologies/: base_ontology.rdf  base_ontology.ttl
src/pipeline/: extractor.py  orchestrator.py
src/serialization/: base_serializer.py
src/serialization/serializers/: turtle_serializer.py
src/validation/: base.py
tests/core/: test_ontology_extractor.py  test_orchestrator.py  test_prompt_manager.py
tests/entity_validation/: test_pure_llm_strategy.py
tests/integration/: fakes.py  test_integration.py
tests/llm/: test_base_llm_clien.py  test_base_llm_client.py  test_retry.py
tests/llm/clients/: test_gemini.py  test_gemini_client.py
tests/ontologies/: osdi_CU1_P1_S1_M1.rdf
tests/ontologys/: osdi_CU1_P1_S1_M1.owx
tests/serialization/: test_turtle.py
